--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "@supabase/supabase-js": "^2.49.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.15.3",
