--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@sendgrid/mail": "^8.1.0",
+    "@tanstack/react-query": "^5.72.2",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "classname-variants": "^1.3.2",
@@ -45,7 +46,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:6000",
+  "proxy": "http://localhost:4000",
   "browserslist": {
     "production": [
       ">0.2%",
