--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.4",
     "@mercadopago/sdk-react": "^0.0.19",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@sendgrid/mail": "^8.1.0",
     "@tanstack/react-query": "^5.72.2",
@@ -19,6 +21,7 @@
     "fsevents": "^2.3.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.284.0",
+    "luxon": "^3.6.1",
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -26,7 +29,7 @@
     "react-datepicker": "^5.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.55.0",
     "react-horizontal-slider": "^1.1.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0",
